# SentigonEdge

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml
bench/: __init__.py  chaos_durability.py  detector_eval.py  eval_harness.py  golden_path.py  latency_harness.py  load_benchmark.py  metrics.py  shadow_infer.py  signature_eval.py  watchlist_eval.py
bench/gold_set/: manifest.yaml
bench/reports/: detector_yolo26m.json  detector_yolo26m.md  detector_yolo26x.json  detector_yolo26x.md  eval_default.json  eval_default.md  signature_eval.json
configs/: media_sources.yaml  playbooks.yaml
configs/cameras/: samples.yaml
configs/ontology/: zones.yaml
configs/signatures/: catalog.py
deploy/: README.md  RUNBOOK.md  RUNPOD.md
deploy/docker/: Dockerfile  Dockerfile.slim  Dockerfile.web
deploy/helm/sentigon/: Chart.yaml  values-runpod.yaml  values.yaml
deploy/helm/sentigon/templates/: NOTES.txt  _helpers.tpl  app-services.yaml  config.yaml  mcp.yaml  migrate-job.yaml  perception.yaml  vllm.yaml  web.yaml
infra/: loki-config.yml  mediamtx.yml  mosquitto.conf  prometheus.yml  promtail-config.yml
infra/grafana/dashboards/: sentigon.json
infra/grafana/provisioning/dashboards/: provider.yml
infra/keycloak/: realm-sentigon.json
migrations/: env.py  script.py.mako
migrations/versions/: abc0b050fb65_initial_schema.py  b1f4watchlist01_watchlist_entries.py  c2f7zonesnap01_zone_snapshots.py  d3a8riskscore01_incident_risk_score.py  e4b2dedup01_incident_grouping.py  f5a1sched01_schedule_windows.py  g6b2nlalert01_nl_alerts.py  h7c3enterprise01_enterprise_parity.py  i8d4srvdef01_core_server_defaults.py  j9e5sensorplane01_sensor_plane.py
scripts/: add_usb_camera.py  backup.sh  build_trt_engine.sh  chaos_test.sh  dev_up.sh  install_services.sh  locateanything_server.py  mcp_client_check.py  prove_backpressure.py  publish_samples.sh  register_cameras.py  restore.sh  retention.py  runpod.py  runpod_batch_verify.py  sentigon.sh  speaker_sink.py  wait_healthy.sh
services/api/: pyproject.toml
services/api/sentigon_api/: __init__.py  __main__.py  app.py
services/common/: pyproject.toml
services/common/sentigon_common/: __init__.py  auth.py  config.py  faceblur.py  health.py  kafka.py  logging.py  metrics.py  plates.py  redact.py  risk.py  seed.py  storage.py  tts.py  vault.py
services/common/sentigon_common/db/: __init__.py  base.py  models.py  session.py
services/common/sentigon_common/schemas/: __init__.py  bus.py  entities.py  enums.py
services/context/: pyproject.toml
services/context/sentigon_context/: __init__.py  __main__.py  app.py  config.py  engine.py  watchlist.py
services/crosssite/: pyproject.toml
services/crosssite/sentigon_crosssite/: __init__.py  __main__.py  app.py  config.py  engine.py  reidscan.py  sites.py
services/dispatch/: pyproject.toml
services/dispatch/sentigon_dispatch/: __init__.py  __main__.py  app.py  config.py  engine.py  sla.py
services/fleet/: pyproject.toml
services/fleet/sentigon_fleet/: __init__.py  __main__.py  app.py  collector.py  config.py  diagnostics.py  engine.py
services/governance/: pyproject.toml
services/governance/sentigon_governance/: __init__.py  eval.py
services/ingest/: pyproject.toml
services/ingest/sentigon_ingest/: __init__.py  __main__.py  app.py  capture.py  config.py  manager.py  mediamtx.py  onvif.py  ptz.py
services/mcp/: pyproject.toml
services/mcp/sentigon_mcp/: __init__.py  __main__.py  server.py
services/mediasource/: pyproject.toml
services/mediasource/sentigon_mediasource/: __init__.py  __main__.py  app.py  config.py  manager.py  usb.py
services/notify/: pyproject.toml
services/notify/sentigon_notify/: __init__.py  __main__.py  app.py  config.py  engine.py  escalation.py  notifier.py  playbooks.py
services/perception/: pyproject.toml
services/perception/deepstream/: Dockerfile  README.md  config_infer_primary_yolo26.txt  config_nvdsanalytics.txt  config_tracker_nvdcf.yml  deepstream_perception.py
services/perception/sentigon_perception/: __init__.py  __main__.py  anpr.py  app.py  attributes.py  config.py  detector.py  embedder.py  fall.py  hwdecode.py  manager.py  reid_index.py  worker.py  zones.py
services/reason/: pyproject.toml
services/reason/sentigon_reason/: __init__.py  __main__.py  app.py  config.py  engine.py  escalate.py  grounding.py  nl_alerts.py  signature_sweep.py  verifier.py
services/search/: pyproject.toml
services/search/sentigon_search/: __init__.py  __main__.py  app.py  config.py  embedder.py  reid.py  service.py
tests/: test_plates.py  test_redact.py  test_signature_catalog.py  test_vlm_sweep.py
web/: next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
web/public/: sw.js
web/scripts/: push_proof.mjs  shot.mjs  shot_grafana.mjs  shot_models.mjs  shot_screen.mjs  shot_trajectory.mjs
web/src/app/: error.tsx  globals.css  layout.tsx  page.tsx  providers.tsx
web/src/components/admin/: AdminScreen.tsx
web/src/components/analytics/: AnalyticsScreen.tsx
web/src/components/anomaly/: AnomalyScreen.tsx
web/src/components/auth/: AuthBar.tsx
web/src/components/cameras/: ZoneEditor.tsx
web/src/components/cases/: CasesScreen.tsx
web/src/components/crosssite/: CrossSiteScreen.tsx
web/src/components/devices/: DevicesScreen.tsx
web/src/components/dispatch/: DispatchScreen.tsx
web/src/components/fleet/: FleetScreen.tsx
web/src/components/fusion/: FusionScreen.tsx
web/src/components/graph/: GraphScreen.tsx
web/src/components/handover/: HandoverScreen.tsx
web/src/components/health/: HealthScreen.tsx
web/src/components/incidents/: IncidentQueue.tsx
web/src/components/live/: LiveScreen.tsx
web/src/components/map/: MapScreen.tsx
web/src/components/models/: ModelsScreen.tsx
web/src/components/reconstruction/: ReconstructionScreen.tsx
web/src/components/shell/: EditorArea.tsx  (+6 more)
web/src/hooks/: useCore.ts  useIngest.ts  usePerceptionSocket.ts
web/src/lib/: api.ts  push.ts  whep.ts
web/src/store/: auth.ts  ui.ts
(+7 files in other folders)
