# Sentigon V2 monorepo root (uv virtual workspace).
# The root is not a package; it wires the workspace members and dev tooling.
# Python is pinned to 3.11: DeepStream/Triton client, torch, and ultralytics
# wheels target 3.11, and the system interpreter here is 3.14.

[project]
name = "sentigon"
version = "0.1.0"
description = "Sentigon V2: AI physical-security intelligence platform"
requires-python = ">=3.11,<3.13"
dependencies = [
    "sentigon-common",
    "sentigon-governance",
    "sentigon-ingest",
    "sentigon-perception",
    "sentigon-context",
    "sentigon-api",
    "sentigon-mediasource",
    "sentigon-reason",
    "sentigon-notify",
    "sentigon-search",
    "sentigon-mcp",
    "sentigon-dispatch",
    "sentigon-fleet",
    "sentigon-crosssite",
]

[tool.uv]
package = false
# Pin the GPU torch set verified working on the Orin (sm_87, PTX-JIT). Version 2.11.0
# on the jetson index ships WITHOUT the nvidia-* CUDA runtime libs and fails to load
# libcublasLt; 2.13.0 bundles them (nvidia-cublas/cudnn/... cu13).
constraint-dependencies = ["torch==2.13.0", "torchvision==0.28.0"]
# This is a single-target deployment (Jetson, linux/aarch64). Limit universal
# resolution to it so the jetson-only GPU torch pin doesn't have to satisfy win32 etc.
environments = ["sys_platform == 'linux' and platform_machine == 'aarch64'"]

[tool.uv.workspace]
members = [
    "services/common",
    "services/governance",
    "services/ingest",
    "services/perception",
    "services/context",
    "services/api",
    "services/mediasource",
    "services/reason",
    "services/notify",
    "services/search",
    "services/mcp",
    "services/dispatch",
    "services/fleet",
    "services/crosssite",
]

[tool.uv.sources]
sentigon-common = { workspace = true }
sentigon-governance = { workspace = true }
sentigon-ingest = { workspace = true }
sentigon-perception = { workspace = true }
sentigon-context = { workspace = true }
sentigon-api = { workspace = true }
sentigon-mediasource = { workspace = true }
sentigon-reason = { workspace = true }
sentigon-notify = { workspace = true }
sentigon-search = { workspace = true }
sentigon-mcp = { workspace = true }
sentigon-dispatch = { workspace = true }
sentigon-fleet = { workspace = true }
sentigon-crosssite = { workspace = true }
# Jetson AGX Orin (sm_87, JetPack 7 / CUDA 13): torch/torchvision come from the default
# PyPI index — recent aarch64 wheels (2.13.0) are CUDA-13 builds (for Grace/Thor) that
# PTX-JIT onto the Orin iGPU at runtime. Verified: YOLO26n ~47ms/frame on GPU vs ~1600ms
# on CPU. The sm_87 "unsupported" warning at import is cosmetic. Pinned in [tool.uv]
# constraint-dependencies so we get the CUDA build + its nvidia-*-cu13 runtime libs.

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "black>=24.8.0",
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "types-PyYAML>=6.0.12",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "web", "migrations/versions", "services/perception/deepstream"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
# UP042: str-mixin enums are intentional (clean SQLAlchemy Enum column mapping).
ignore = ["E501", "B008", "UP042"]

[tool.black]
line-length = 100
target-version = ["py311"]
extend-exclude = "migrations/versions"

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
