[project]
name = "sentigon-api"
version = "0.1.0"
description = "Sentigon core API: incidents, zones, signatures, events, analytics"
requires-python = ">=3.11,<3.13"
dependencies = ["sentigon-common", "pillow>=10.0", "piper-tts>=1.2", "numpy>=1.26", "aiomqtt>=2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sentigon_api"]
