[project]
name = "sentigon-common"
version = "0.1.0"
description = "Sentigon shared library: schemas, DB, Kafka, storage, vault, logging"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13",
    "aiokafka>=0.11",
    "minio>=7.2",
    "qdrant-client>=1.9",
    "redis>=5.0",
    "structlog>=24.1",
    "orjson>=3.10",
    "PyYAML>=6.0",
    "httpx>=0.27",
    "tenacity>=8.4",
    "prometheus-client>=0.20",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.1,<4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sentigon_common"]
