[project]
name = "sentigon-context"
version = "0.1.0"
description = "Sentigon context engine: stateful behavior signatures over the perception bus"
requires-python = ">=3.11,<3.13"
dependencies = ["sentigon-common", "shapely>=2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sentigon_context"]
