[project]
name = "sentigon-crosssite"
version = "0.1.0"
description = "Sentigon cross-site intelligence: sites provisioning + cross-site entity correlation"
requires-python = ">=3.11,<3.13"
dependencies = ["sentigon-common"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sentigon_crosssite"]
