[project]
name = "sentigon-dispatch"
version = "0.1.0"
description = "Sentigon managed-SOC dispatch: responder dispatch + SLA + on-call for confirmed incidents"
requires-python = ">=3.11,<3.13"
dependencies = ["sentigon-common", "sentigon-notify"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sentigon_dispatch"]
