[project]
name = "sentigon-governance"
version = "0.1.0"
description = "Sentigon model governance: champion-challenger evaluation and promotion"
requires-python = ">=3.11,<3.13"
dependencies = ["sentigon-common"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sentigon_governance"]
