[project]
name = "sentigon-ingest"
version = "0.1.0"
description = "Sentigon ingest: ONVIF discovery, RTSP capture, MediaMTX restream, recording, health"
requires-python = ">=3.11,<3.13"
dependencies = [
    "sentigon-common",
    "opencv-python-headless>=4.10",
    "numpy>=1.26",
    "wsdiscovery>=2.0",
    "onvif-zeep>=0.2.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sentigon_ingest"]
