[project]
name = "sentigon-mcp"
version = "0.1.0"
description = "Sentigon MCP server: expose incidents, search, and evidence as MCP tools"
requires-python = ">=3.11,<3.13"
dependencies = ["sentigon-common", "mcp>=1.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sentigon_mcp"]
