[project]
name = "sentigon-mediasource"
version = "0.1.0"
description = "Sentigon media-source: acquire real internet footage, restream as RTSP cameras"
requires-python = ">=3.11,<3.13"
dependencies = ["sentigon-common"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sentigon_mediasource"]
