[project]
name = "sentigon-notify"
version = "0.1.0"
description = "Sentigon notify: real email/webhook delivery on confirmed incidents"
requires-python = ">=3.11,<3.13"
dependencies = ["sentigon-common", "pywebpush>=2.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sentigon_notify"]
