[project]
name = "sentigon-perception"
version = "0.1.0"
description = "Sentigon perception: GPU detect/track/ReID over RTSP, metadata to Kafka"
requires-python = ">=3.11,<3.13"
dependencies = [
    "sentigon-common",
    "ultralytics>=8.4.0",
    "lap>=0.5.12",
    "torch>=2.7.0",
    "torchvision>=0.19.0",
    "numpy>=1.26",
    "opencv-python-headless>=4.10",
    "easyocr>=1.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sentigon_perception"]
