[project]
name = "sentigon-reason"
version = "0.1.0"
description = "Sentigon Reason: VLM verification of candidate events (verdict + SITREP)"
requires-python = ">=3.11,<3.13"
dependencies = ["sentigon-common"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sentigon_reason"]
