[project]
name = "sentigon-search"
version = "0.1.0"
description = "Sentigon search: CLIP semantic + visual search over captured evidence"
requires-python = ">=3.11,<3.13"
dependencies = [
    "sentigon-common",
    "open-clip-torch>=2.24",
    "torch>=2.7.0",
    "pillow>=10.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sentigon_search"]
